# DRF-BlogAPI

./: pyproject.toml  requirements.txt
src/api/: admin.py  models.py  pagination.py  permissions.py  serilizers.py  urls.py  views.py
src/api/commen/: base_views.py
src/api/migrations/: 0001_initial.py  0002_alter_blogs_author_alter_comments_author.py  0003_blogs_img.py  0004_alter_blogs_author_alter_comments_author.py
src/blog/: settings.py  urls.py
